AVVideoCaptureSource should not start/stop the camera if trying to apply the same size/frame rate configuration https://bugs.webkit.org/show_bug.cgi?id=228634 <rdar://81174160>

Reviewed by Eric Carlson.

In some configurations, pages want to set a frame rate of 30, but the actual frame rate set will be 29.9999.
In that case, our heuristic to not recalibrate the camera fails.
To prevent this, we add checks in AVVideoCaptureSource to validate whether the new presets are the same as the already applied ones.

Manually tested.

* platform/mediastream/mac/AVVideoCaptureSource.h:
* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::setSessionSizeAndFrameRate):


Canonical link: https://commits.webkit.org/240149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280517 268f45cc-cd09-0410-ab3c-d52691b4dbfc